--- a/src/index.css
+++ b/src/index.css
@@ -24,13 +24,14 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 2rem;
+  gap: 1rem;
   margin-top: 1rem;
 }
 
 .post-list h2 {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
+  margin-bottom: 1rem;
 }
 
 .comments-container {
@@ -38,4 +39,8 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+
+.progress {
+  padding: 50px;
 }
